# app/Http/Requests/API/SocialMedia/StoreSocialMediaRequest.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Requests\API\SocialMedia;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreSocialMediaRequest extends FormRequest
+{
+  /**
+   * Determine if the user is authorized to make this request.
+   *
+   * @return bool
+   */
+  public function authorize()
+  {
+    return true;
+  }
+
+  /**
+   * Get the validation rules that apply to the request.
+   *
+   * @return array<string, mixed>
+   */
+  public function rules()
+  {
+    return [
+      'name' => 'required|string'
+    ];
+  }
+}
